WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150687
cdjs-tests.yaml/main.js.ftl fails due to FTL ArithSub code for supporting UntypedUse operands
https://bugs.webkit.org/show_bug.cgi?id=150687
Summary
cdjs-tests.yaml/main.js.ftl fails due to FTL ArithSub code for supporting Unt...
Mark Lam
Reported
2015-10-29 12:59:16 PDT
For example, see
https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20JSC%20%28Tests%29/builds/422
. This issue does not always reproduces. But on the machines where they do reproduce, it reproduces consistently. Will disable the feature temporarily until I figure out what the issue is.
Attachments
patch to disable the feature.
(1.55 KB, patch)
2015-10-29 13:05 PDT
,
Mark Lam
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Fixed ChangeLog comment.
(1.55 KB, patch)
2015-10-29 13:12 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2015-10-29 13:02:11 PDT
This issue is strictly in the FTL and 64-bit only. There were some 32-bit JSC bots that appeared to be failing due to this. That was due to a configuration bug on those bots where they were accidentally building 64-bit instead of 32-bit. That issue has been fixed in
http://trac.webkit.org/changeset/191747
.
Mark Lam
Comment 2
2015-10-29 13:05:39 PDT
Created
attachment 264336
[details]
patch to disable the feature.
WebKit Commit Bot
Comment 3
2015-10-29 13:10:51 PDT
Comment on
attachment 264336
[details]
patch to disable the feature. Rejecting
attachment 264336
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 264336, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/JavaScriptCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://webkit-queues.webkit.org/results/354537
Mark Lam
Comment 4
2015-10-29 13:12:44 PDT
Created
attachment 264338
[details]
Fixed ChangeLog comment.
WebKit Commit Bot
Comment 5
2015-10-29 14:08:54 PDT
Comment on
attachment 264338
[details]
Fixed ChangeLog comment. Clearing flags on attachment: 264338 Committed
r191753
: <
http://trac.webkit.org/changeset/191753
>
WebKit Commit Bot
Comment 6
2015-10-29 14:09:00 PDT
All reviewed patches have been landed. Closing bug.
Filip Pizlo
Comment 7
2015-10-29 16:41:50 PDT
Disabling this optimization by checking the result type is super unusual and likely very fragile. Can you please use the use kinds instead?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug