cdjs-tests.yaml/main.js.ftl fails due to FTL ArithSub code for supporting UntypedUse operands. https://bugs.webkit.org/show_bug.cgi?id=150687

Unreviewed.

Disabling the feature while it is being debugged.  I'm doing this by effectively
rolling out only the changes in FTLCapabilities.cpp.


* ftl/FTLCapabilities.cpp:
(JSC::FTL::canCompile):


Canonical link: https://commits.webkit.org/168856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191753 268f45cc-cd09-0410-ab3c-d52691b4dbfc